--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 <body>
     <div class="container">
         <div class="text-area-container">
-            <h2>입력 텍스트</h2>
-            <textarea id="inputText" placeholder="여기에 텍스트를 입력하세요..."></textarea>
+            <h2>변환할 텍스트</h2>
+            <textarea id="inputText" placeholder="변환할 텍스트를 붙여넣으세요.(Ctrl + V)"></textarea>
         </div>
         <div class="text-area-container">
             <h2>변환 결과</h2>
-            <textarea id="outputText" readonly></textarea>
+            <textarea id="outputText" placeholder="변환된 텍스트를 복사하세요.(Ctrl + C)" readonly></textarea>
         </div>
     </div>
     <div class="button-group">
