--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 </head>
 <body>
     <div class="container">
+        <legend class="title">* 빈 줄을 삭제해줍니다.</legend>  
         <div class="text-area-container">
             <h2>변환할 텍스트</h2>
             <textarea id="inputText" placeholder="변환할 텍스트를 붙여넣으세요.(Ctrl + V)"></textarea>
