--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>텍스트 변환</title>
+    <title>빈 줄 삭제</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -66,25 +66,74 @@
         #clearBtn:hover {
             background-color: #da190b;
         }
+        #pasteBtn {
+            background-color: #4CAF50;
+            color: white;
+        }
+        #pasteBtn:hover {
+            background-color: #45a049;
+        }
+        #copyBtn {
+            background-color: #4CAF50;
+            color: white;
+        }
+        #copyBtn:hover {
+            background-color: #45a049;
+        }
+        .notification {
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: #ffeb3b;
+            color: #333;
+            padding: 15px 30px;
+            border-radius: 8px;
+            font-weight: bold;
+            font-size: 18px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            opacity: 0;
+            transition: opacity 0.3s ease, top 0.3s ease;
+            z-index: 1000;
+        }
+        .notification.show {
+            opacity: 1;
+        }
     </style>
 </head>
 <body>
-    <h3>* 빈 줄을 삭제해줍니다.</h3>
+    <h1>빈 줄 삭제</h1>
     <div class="container">  
         <div class="text-area-container">
             <h2>변환할 텍스트</h2>
-            <textarea id="inputText" placeholder="변환할 텍스트를 붙여넣으세요.(Ctrl + V)"></textarea>
+            <textarea id="inputText" placeholder="붙여넣기 버튼을 누르거나, 변환할 텍스트를 붙여넣으세요.(Ctrl + V)"></textarea>
         </div>
         <div class="text-area-container">
             <h2>변환 결과</h2>
-            <textarea id="outputText" placeholder="변환된 텍스트를 복사하세요.(Ctrl + C)" readonly></textarea>
+            <textarea id="outputText" placeholder="복사하기 버튼을 누르거나, 변환된 텍스트를 드래그해서 복사하세요.(Ctrl + C)" readonly></textarea>
         </div>
     </div>
     <div class="button-group">
-        <button id="convertBtn">변환하기</button>
+        <button id="pasteBtn">1.붙여넣기(왼쪽칸)</button>
+        <button id="convertBtn">2.변환(왼쪽칸→오른쪽칸)</button>
+        <button id="copyBtn">3.복사하기(오른쪽칸)</button>
         <button id="clearBtn">모두 삭제</button>
     </div>
+    <p>※ "1.붙여넣기" 기능은 브라우저 보안 정책에 따라 보안 팝업 메세지가 나타날 수 있습니다. 허용을 눌러주시거나, 'Ctrl+V'를 사용해주세요.</p>
+
+    <div id="notification" class="notification"></div>
+
     <script>
+        function showNotification(message) {
+            const notification = document.getElementById('notification');
+            notification.textContent = message;
+            notification.classList.add('show');
+            
+            setTimeout(() => {
+                notification.classList.remove('show');
+            }, 2000); // 2초 후에 알림 사라짐
+        }
+
         document.getElementById('convertBtn').addEventListener('click', function() {
             const inputText = document.getElementById('inputText').value;
             const outputText = document.getElementById('outputText');
@@ -97,11 +146,40 @@
             text = text.replace(/[\u200B-\u200D\uFEFF]/g, '');
             
             outputText.value = text;
+            showNotification('변환이 완료되었습니다.');
         });
+
         document.getElementById('clearBtn').addEventListener('click', function() {
             document.getElementById('inputText').value = '';
             document.getElementById('outputText').value = '';
+            showNotification('모든 내용이 삭제되었습니다.');
+        });
+
+        // 붙여넣기 버튼 기능
+        document.getElementById('pasteBtn').addEventListener('click', function() {
+            navigator.clipboard.readText()
+                .then(text => {
+                    document.getElementById('inputText').value = text;
+                    showNotification('클립보드에서 텍스트를 붙여넣었습니다.');
+                })
+                .catch(err => {
+                    showNotification('클립보드에서 텍스트를 가져올 수 없습니다.');
+                    console.error('Failed to read clipboard contents: ', err);
+                });
+        });
+
+        // 복사하기 버튼 기능
+        document.getElementById('copyBtn').addEventListener('click', function() {
+            const outputText = document.getElementById('outputText').value;
+            navigator.clipboard.writeText(outputText)
+                .then(() => {
+                    showNotification('성공적으로 복사되었습니다!');
+                })
+                .catch(err => {
+                    showNotification('복사하는데 실패했습니다.');
+                    console.error('Failed to copy text: ', err);
+                });
         });
     </script>
 </body>
-</html> 
+</html>
