--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>빈 줄 삭제</title>
+    <title>빈 줄 제거</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -102,7 +102,7 @@
     </style>
 </head>
 <body>
-    <h1>빈 줄 삭제</h1>
+    <h1>빈 줄 제거</h1>
     <div class="container">  
         <div class="text-area-container">
             <h2>변환할 텍스트</h2>
