--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <button id="copyBtn">복사<br/><span style="font-size: 12px;">(오른쪽)</span></button>
         <button id="clearBtn">모두 삭제<br/><span style="font-size: 12px;">(왼쪽,오른쪽)</span></button>       
     </div>
-    <p>※ "붙여넣기" 기능은 브라우저 보안 정책에 따라 보안 팝업 메세지가 나타날 수 있습니다. 허용을 눌러주시거나, 'Ctrl+V'를 사용해주세요.</p>
+    <p>※ "붙여넣기" 기능은 메세지가 나타날 수 있습니다. 최초 1회 허용을 눌러주시거나, 'Ctrl+V'를 사용해주세요.</p>
 
     <div id="notification" class="notification"></div>
 
