--- a/index.html
+++ b/index.html
@@ -189,11 +189,29 @@
         details[open] summary::after {
             display: none;
         }
+	#codingHelper {
+		margin-left: auto;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 450px;
+		height: 80px;
+		background-color: #4ec6f8;
+		color: black;
+		text-decoration: none;
+		border-radius: 4px;
+		font-size: 16px;
+		font-weight: bold;
+		box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+		text-align: center;
+		padding: 0 10px;
+		box-sizing: border-box;
+	}
     </style>
 </head>
 
 <body>
-    <h1>빈 줄 제거</h1>
+    <h2>빈 줄 제거	(개발자 : 김혜림)</h2>
     <div class="container">
         <div class="text-area-container">
             <h2>변환할 텍스트</h2>
@@ -214,28 +232,11 @@
     <button id="clearBtn" style="height: 80px;">모두 삭제<br /><span style="font-size: 12px;">(왼쪽,오른쪽)</span></button>
   
     <!-- 하늘색 다운로드 버튼 -->
-    <a href="Coding_Helper_v1.0.exe" style="
-      margin-left: auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 500px;
-      height: 80px;
-      background-color: #4ec6f8;
-      color: black;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 16px;
-      font-weight: bold;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      text-align: center;
-      padding: 0 10px;
-      box-sizing: border-box;
-    ">
+    <a href="Coding_Helper_v1.0.exe" id="codingHelper">
       <div style="line-height: 1.3;">
-        코딩 도우미 다운로드<br />
+        코딩 도우미 v1.0 다운로드<br />
         <span style="font-size: 12px; font-weight: normal; color: #333;">
-          프로그램을 다운로드 받으면 Insert 키를 ★로 바꾸고, 빈 줄 없이 붙여넣기 할 수 있어요.
+          단축키로 편리하게 빈 줄 없이 붙여넣기를 할 수 있고, Insert 키를 ★로 바꿀 수 있어요.
         </span>
       </div>
     </a>
@@ -251,7 +252,7 @@
     <details>
       <summary>업데이트 내역</summary>
       <ul>
-        <li><span class="version" style="font-weight:bold;">(v4.0)</span> 코딩 도우미 개발 및 다운로드 링크 추가</li>
+        <li><span class="version" style="font-weight:bold;">(v4.0)</span> 코딩 도우미 v1.0 개발 및 다운로드 링크 추가</li>
         <li><span class="version" style="font-weight:bold;">(v3.0)</span> 자동변환 옵션 추가, 버튼 스타일 변경, 업데이트 내역 리스트 추가</li>
         <li><span class="version" style="font-weight:bold;">(v2.0)</span> 이름 변경(빈 줄 제거), 도메인 변경, 버튼 추가(붙여넣기, 복사), 사용자 알림메세지 추가</li>
         <li><span class="version" style="font-weight:bold;">(v1.0)</span> 텍스트 변환기 최초 개발, 텍스트 변환&모두삭제 버튼 제공</li>
