--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <button id="clearBtn" style="height: 80px;">모두 삭제<br /><span style="font-size: 12px;">(왼쪽,오른쪽)</span></button>
   
     <!-- 하늘색 다운로드 버튼 -->
-    <a href="Coding_Helper_v1.0.exe" id="codingHelper">
+    <a href="Coding_Helper.exe" id="codingHelper">
       <div style="line-height: 1.3;">
         코딩 도우미 v1.0 다운로드<br />
         <span style="font-size: 12px; font-weight: normal; color: #333;">
