--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- 업데이트 내역 -->
     <div class="update-log" style="margin-top: 10px;">
-        <details>
+        <details open>
             <summary>업데이트 내역</summary>
             <ul>
                 <li><span class="version" style="font-weight:bold;">(v4.0)</span> 코딩 도우미 개발 및 다운로드 링크 추가</li>
