--- a/index.html
+++ b/index.html
@@ -24,16 +24,15 @@
     <label class="checkbox"> <input type="checkbox" id="isAuto" checked>자동 변환</label>
     <!-- 버튼 그룹 -->
     <div class="button-group">
-        <button id="pasteBtn">붙여넣기<br /><span>(왼쪽)</span></button>
-        <button id="convertBtn">변환 실행<br /><span>(왼쪽→오른쪽)</span></button>
-        <button id="copyBtn">복사<br /><span>(오른쪽)</span></button>
-        <button id="clearBtn">모두 삭제<br /><span>(왼쪽,오른쪽)</span></button>
+        <button id="pasteBtn">붙여넣기</button>
+        <button id="convertBtn">변환 실행</button>
+        <button id="copyBtn">복사</button>
+        <button id="clearBtn">모두 삭제</button>
 
         <!-- 하늘색 다운로드 버튼 -->
-        <a href="https://ihan1004.github.io/Coding_Helper/" id="codingHelper">
+        <a href="https://ihan1004.github.io/Apps/" id="Apps">
             <div style="line-height: 1.3;">
-                코딩 도우미 다운로드<br />
-                <span>단축키로 빈 줄 없이 붙여넣기를 할 수 있고, Insert 키를 바꿀 수 있어요.</span>
+                통합 사이트 이동
             </div>
         </a>
     </div>
@@ -48,7 +47,7 @@
         <details open>
             <summary>업데이트 내역</summary>
             <ul>
-                <li><span class="version">(v4.0)</span> 코딩 도우미 개발 및 다운로드 링크 추가</li>
+                <li><span class="version">(v4.1)</span> 통합 사이트 이동 링크 추가</li>
                 <li><span class="version">(v3.0)</span> 자동변환 옵션 추가, 버튼 스타일 변경, 업데이트 내역 리스트 추가</li>
                 <li><span class="version">(v2.0)</span> 이름 변경(빈 줄 제거), 도메인 변경, 버튼 추가(붙여넣기, 복사), 사용자 알림메세지 추가</li>
                 <li><span class="version">(v1.0)</span> 텍스트 변환기 최초 개발, 텍스트 변환&모두삭제 버튼 제공</li>
