--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     <!-- 업데이트 내역 -->
     <div class="update-log" style="margin-top: 10px;">
         <details open>
+            <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1502313728236361"
+     crossorigin="anonymous"></script>
             <summary>업데이트 내역</summary>
             <ul>
                 <li><span class="version">(v4.1)</span> 통합 사이트 이동 링크 추가</li>
