--- a/index.html
+++ b/index.html
@@ -1,61 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>빈 줄 제거</title>
-    <link href="remove_empty_lines.css" rel="stylesheet">
-</head>
-
-<body>
-    <h2>빈 줄 제거 (개발자 : 김혜림)</h2>
-    <div class="container">
-        <div class="text-area-container">
-            <h2>변환할 텍스트</h2>
-            <textarea id="inputText" placeholder="붙여넣기 버튼을 누르거나, 변환할 텍스트를 붙여넣으세요.(Ctrl + V)"></textarea>
-        </div>
-        <div class="text-area-container">
-            <h2>변환 결과</h2>
-            <textarea id="outputText" placeholder="복사하기 버튼을 누르거나, 변환된 텍스트를 드래그해서 복사하세요.(Ctrl + C)"></textarea>
-        </div>
-    </div>
-    <br />
-    <label class="checkbox"> <input type="checkbox" id="isAuto" checked>자동 변환</label>
-    <!-- 버튼 그룹 -->
-    <div class="button-group">
-        <button id="pasteBtn">붙여넣기</button>
-        <button id="convertBtn">변환 실행</button>
-        <button id="copyBtn">복사</button>
-        <button id="clearBtn">모두 삭제</button>
-
-        <!-- 하늘색 다운로드 버튼 -->
-        <a href="https://ihan1004.github.io/Apps/" id="Apps">
-            <div style="line-height: 1.3;">
-                통합 사이트 이동
-            </div>
-        </a>
-    </div>
-
-    <!-- 설명 문구 -->
-    <p style="margin-top: 0;">
-        ※ "붙여넣기" 기능은 보안 관련 메세지가 나타날 수 있습니다. 최초 1회 허용을 눌러주시거나, 'Ctrl+V'를 사용해주세요.
-    </p>
-
-    <!-- 업데이트 내역 -->
-    <div class="update-log" style="margin-top: 10px;">
-        <details open>
-            <summary>업데이트 내역</summary>
-            <ul>
-                <li><span class="version">(v4.1)</span> 통합 사이트 이동 링크 추가</li>
-                <li><span class="version">(v3.0)</span> 자동변환 옵션 추가, 버튼 스타일 변경, 업데이트 내역 리스트 추가</li>
-                <li><span class="version">(v2.0)</span> 이름 변경(빈 줄 제거), 도메인 변경, 버튼 추가(붙여넣기, 복사), 사용자 알림메세지 추가</li>
-                <li><span class="version">(v1.0)</span> 텍스트 변환기 최초 개발, 텍스트 변환&모두삭제 버튼 제공</li>
-            </ul>
-        </details>
-    </div>
-    <div id="notification" class="notification"></div>
-    <script src="remove_empty_lines.js"></script>
-</body>
-
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://ihan1004.github.io/Front/remove_empty_lines/" />
+    <title>페이지 이동 중...</title>
+  </head>
+  <body>
+    <p>잠시만 기다려 주세요. <a href="https://ihan1004.github.io/Front/remove_empty_lines/">변경된 주소</a>로 이동 중입니다.</p>
+  </body>
 </html>
