--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 
 <head>
-    <meta http-equiv="refresh" content="0; url=https://ihan1004.github.io/Front/remove_empty_lines/" />
+    <meta http-equiv="refresh" content="0; url=https://ihan1004.github.io/remove_empty_lines" />
     <title>페이지 이동 중...</title>
 </head>
 
 <body>
-    <p>잠시만 기다려 주세요. <a href="https://ihan1004.github.io/Front/remove_empty_lines/">변경된 주소</a>로 이동 중입니다.</p>
+    <p>잠시만 기다려 주세요. <a href="https://ihan1004.github.io/remove_empty_lines">변경된 주소</a>로 이동 중입니다.</p>
 </body>
 
 </html>
