--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ko">
 
 <head>
+    <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://ihan1004.github.io/remove_empty_lines" />
-    <title>페이지 이동 중...</title>
+    <title>페이지 이동 중</title>
 </head>
 
 <body>
